# llm-saydo-gap-benchmark

./: .gitignore  HANDOFF.md  README.md  decisions_log.md  paper.md  preregistration.md  preregistration_v2.md  preregistration_v3.md  pyproject.toml  references.bib  report.md  report_v2.md
results/: audit_h4_d3_followup.json  phase10_D2-core_summary.json  phase10_F-base_summary.json  phase10_F-nobase_summary.json  phase11_counterfactual.json  phase11_gap.json  phase11_verbatim.json  phase13_noise_floor.json  phase14_field_mask.json  phase15_calibration_bins.json  phase16_cf_vs_noise.json  phase17_h9_equivalence.json  phase18_pairwise_gap_diffs.json  phase19_spearman.json  phase1_summary.json  phase20_reweighting_and_B.json  phase21_h9_bge_sensitivity.json  phase22_ml_F-base_summary.json  phase22_ml_F-nobase_summary.json  phase23_ml_analysis.json  phase24_human_baseline.json  phase25_claude_batch_input.json  phase25_claude_batch_output.json  phase26_ml_human_baseline.json  phase27_domain_comparison.json  phase28_ml_counterfactual.json  phase29_ml_noise_floor.json  phase2_baselines.json  phase30_ml_h9_verbatim.json  phase31_core1000_v3.json  phase31_core1000_v3.parquet  phase32_smoke.json  phase33_history_pool.json  phase33_neighbours.json  phase38_lgbm_preds.json  phase38_neighbours_random.json  phase3_scaling.json  phase40_claude_M3.jsonl  phase40_claude_M8.jsonl  phase40_claude_M9.jsonl  (+53 more)
scripts/: chain_after_fbase.sh  iteration_audit_prompts.md  launch_final_audit.sh  phase10_arms.py  phase10d_d2_on_core.py  phase11_counterfactual.py  phase11_gap.py  phase12_report.py  (+49 more)
(+35 files in other folders)
