[project]
name = "study"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.104.1",
    "datasets>=4.8.5",
    "google-genai>=2.6.0",
    "huggingface-hub>=1.16.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "polars>=1.41.0",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
]
